force-app/main/default/objects/Retail_Distributor_Shipment_Trackinginfo__c/Retail_Distributor_Shipment_Trackinginfo__c.object-meta.xml
<CustomObject>
    <label>Retail Distributor Shipment Trackinginfo</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Distributor Shipment Trackinginfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>