force-app/main/default/objects/Retail_Distributor_Shipment_Trackinginfo__c/fields/Select_Order__c.field-meta.xml
<CustomField>
    <fullName>Select_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Select Order</label>
    <referenceTo>Retail_Order__c</referenceTo>
    <relationshipLabel>Retail Distributor Shipment Trackinginfo</relationshipLabel>
    <relationshipName>Retail_Distributor_Shipment_Trackinginfo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>