force-app/main/default/objects/Retail_Distributor_Shipment_Trackinginfo__c/fields/Transporter_number__c.field-meta.xml
<CustomField>
    <fullName>Transporter_number__c</fullName>
    <label>Transporter number</label>
    <type>Phone</type>
</CustomField>