force-app/main/default/objects/Retail_Distributor_Shipment_Trackinginfo__c/fields/Upload_LR_from_transporter__c.field-meta.xml
<CustomField>
    <fullName>Upload_LR_from_transporter__c</fullName>
    <label>Upload LR from transporter</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>